Add parameters to IDE to use HttpURLConnection under JDK 17.